<resources>
    <string name="app_name">Calculator</string>
    <string name="_1_num">1</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="del">del</string>
    <string name="clear">C</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multi">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="pov">x2</string>
    <string name="sqr">sqr</string>
    <string name="_0">0</string>
    <string name="per">per</string>
    <string name="sum">+</string>
    <string name="res">=</string>
    <string name="float_res">,</string>
</resources>